--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.29.0",
+    "glamor": "^2.20.40",
+    "glamorous": "^4.11.0",
+    "md5": "^2.2.1",
+    "phoenix": "^1.3.0",
+    "ramda": "^0.25.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.0.3",
+    "eslint": "^4.13.1",
+    "eslint-plugin-flowtype": "^2.40.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-react": "^7.5.1",
     "react-scripts": "1.0.17"
   },
   "scripts": {
