--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,13 @@
     "glamorous": "^4.11.0",
     "md5": "^2.2.1",
     "phoenix": "^1.3.0",
+    "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
